{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 101,
  "lineage": "c6cadb24-8245-540a-0be7-a5f45f16f1e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066ccd697026eba39",
            "arn": "arn:aws:ec2:us-east-2:732328309145:elastic-ip/eipalloc-066ccd697026eba39",
            "association_id": "eipassoc-0acbc6e61849ed1f2",
            "domain": "vpc",
            "id": "eipalloc-066ccd697026eba39",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05f48eb679f507a71",
            "private_dns": "ip-10-0-1-8.us-east-2.compute.internal",
            "private_ip": "10.0.1.8",
            "public_dns": "ec2-3-140-209-151.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.209.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-nat-eip",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-nat-eip",
              "Project": "tta"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0167608b1929ca90b",
            "arn": "arn:aws:ec2:us-east-2:732328309145:instance/i-04e2d9ae266a4648e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e2d9ae266a4648e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "tta-dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b19527149b3be857",
            "private_dns": "ip-10-0-3-18.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:732328309145:key/d9c89f9c-f5d6-48b3-be48-99e600941599",
                "throughput": 125,
                "volume_id": "vol-05dfafeac1968419e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e4201b24eb42a98",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-ec2-private",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-ec2-private",
              "Project": "tta"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8d7df6e79746b95"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.ssh_access",
            "aws_subnet.priv_a",
            "aws_vpc.dev",
            "data.aws_ami.amazon_linux_2023",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0167608b1929ca90b",
            "arn": "arn:aws:ec2:us-east-2:732328309145:instance/i-07530128a32f06a66",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07530128a32f06a66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "tta-dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-066a499b6e642332a",
            "private_dns": "ip-10-0-1-10.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-18-116-86-5.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.86.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:732328309145:key/d9c89f9c-f5d6-48b3-be48-99e600941599",
                "throughput": 125,
                "volume_id": "vol-057382547b5d001cf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0980c3c24a55816fb",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-ec2-public",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-ec2-public",
              "Project": "tta"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-026e82970a69ea3ec"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.web_access",
            "aws_subnet.public_a",
            "aws_vpc.dev",
            "data.aws_ami.amazon_linux_2023",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:732328309145:internet-gateway/igw-0363c5d2b88a4af4a",
            "id": "igw-0363c5d2b88a4af4a",
            "owner_id": "732328309145",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-igw",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-igw",
              "Project": "tta"
            },
            "vpc_id": "vpc-03ad01ecfafb1de72"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "tta-dev-lb-logs",
                "enabled": true,
                "prefix": "tta-dev-lb"
              }
            ],
            "client_keep_alive": 3600,
            "desync_mitigation_mode": "defensive",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:732328309145:loadbalancer/app/tta-dev-lb/5e40ff8c8cf74a48",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "application",
            "name": "tta-dev-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02e9f913fa93b38bd"
            ],
            "subnets": [
              "subnet-05d4c6e779ea31a8e",
              "subnet-0980c3c24a55816fb"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-lb",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-lb",
              "Project": "tta"
            },
            "xff_header_processing_mode": "append"
          },
          "dependencies": [
            "aws_s3_bucket.lb_logs",
            "aws_security_group.lb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:732328309145:targetgroup/tta-dev-tg/4678582dfa7a1763",
            "arn_suffix": "targetgroup/tta-dev-tg/4678582dfa7a1763",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:732328309145:targetgroup/tta-dev-tg/4678582dfa7a1763",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tta-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-tg",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-tg",
              "Project": "tta"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03ad01ecfafb1de72"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:732328309145:targetgroup/tta-dev-tg/4678582dfa7a1763-20250501192515915500000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:732328309145:targetgroup/tta-dev-tg/4678582dfa7a1763",
            "target_id": "i-07530128a32f06a66"
          },
          "dependencies": [
            "aws_instance.ec2_public",
            "aws_key_pair.ec2_key",
            "aws_lb_target_group.app_tg",
            "aws_security_group.web_access",
            "aws_subnet.public_a",
            "aws_vpc.dev",
            "data.aws_ami.amazon_linux_2023",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066ccd697026eba39",
            "association_id": "eipassoc-0acbc6e61849ed1f2",
            "connectivity_type": "public",
            "id": "nat-0609618176d71f58b",
            "network_interface_id": "eni-05f48eb679f507a71",
            "private_ip": "10.0.1.8",
            "public_ip": "3.140.209.151",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0980c3c24a55816fb",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-nat-gateway",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-nat-gateway",
              "Project": "tta"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_a",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:732328309145:route-table/rtb-08281279904e7483b",
            "id": "rtb-08281279904e7483b",
            "owner_id": "732328309145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0363c5d2b88a4af4a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-priv-a-route-table",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-priv-a-route-table",
              "Project": "tta"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ad01ecfafb1de72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:732328309145:route-table/rtb-00141bc8f999f0fcc",
            "id": "rtb-00141bc8f999f0fcc",
            "owner_id": "732328309145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0363c5d2b88a4af4a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-public-a-route-table",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-public-a-route-table",
              "Project": "tta"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ad01ecfafb1de72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:732328309145:route-table/rtb-08b3f8758da588568",
            "id": "rtb-08b3f8758da588568",
            "owner_id": "732328309145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0363c5d2b88a4af4a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-public-b-route-table",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-public-b-route-table",
              "Project": "tta"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ad01ecfafb1de72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb390ed3aee97da1",
            "route_table_id": "rtb-08281279904e7483b",
            "subnet_id": "subnet-05e4201b24eb42a98"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.priv_a",
            "aws_subnet.priv_a",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c634ac3118c8f06",
            "route_table_id": "rtb-00141bc8f999f0fcc",
            "subnet_id": "subnet-0980c3c24a55816fb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_a",
            "aws_subnet.public_a",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00af59d4142d1c128",
            "route_table_id": "rtb-08b3f8758da588568",
            "subnet_id": "subnet-05d4c6e779ea31a8e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_b",
            "aws_subnet.public_b",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:732328309145:security-group/sg-02e9f913fa93b38bd",
            "description": "Security group for ALB in dev environment",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow all outbound traffic to VPC CIDR",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e9f913fa93b38bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/27",
                  "10.0.2.0/27"
                ],
                "description": "Allow HTTP from within VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/27",
                  "10.0.2.0/27"
                ],
                "description": "Allow HTTPS from within VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.58.245.171/32"
                ],
                "description": "Allow SSH from external restricted IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tta-dev-lb-sg",
            "name_prefix": "",
            "owner_id": "732328309145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-lb-sg",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-lb-sg",
              "Project": "tta"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ad01ecfafb1de72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:732328309145:security-group/sg-0a8d7df6e79746b95",
            "description": "Allow SSH from VPC CIDR",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8d7df6e79746b95",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from VPC CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "732328309145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ssh-access",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ssh-access",
              "Project": "tta"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ad01ecfafb1de72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:732328309145:security-group/sg-026e82970a69ea3ec",
            "description": "Allow HTTP and HTTPS from subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/27"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026e82970a69ea3ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/27"
                ],
                "description": "HTTP from subnet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/27"
                ],
                "description": "HTTPS from subnet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_http_https",
            "name_prefix": "",
            "owner_id": "732328309145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tta-web-sg"
            },
            "tags_all": {
              "Name": "tta-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ad01ecfafb1de72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:732328309145:subnet/subnet-05e4201b24eb42a98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e4201b24eb42a98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732328309145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-private-a-subnet",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-private-a-subnet",
              "Project": "tta"
            },
            "vpc_id": "vpc-03ad01ecfafb1de72"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:732328309145:subnet/subnet-0980c3c24a55816fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0980c3c24a55816fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732328309145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-public-a-subnet",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-public-a-subnet",
              "Project": "tta"
            },
            "vpc_id": "vpc-03ad01ecfafb1de72"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:732328309145:subnet/subnet-05d4c6e779ea31a8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d4c6e779ea31a8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732328309145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-public-b-subnet",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-public-b-subnet",
              "Project": "tta"
            },
            "vpc_id": "vpc-03ad01ecfafb1de72"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:732328309145:vpc/vpc-03ad01ecfafb1de72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-023d4e5e2e5ac1a00",
            "default_route_table_id": "rtb-0ef6ef7dfc67bc984",
            "default_security_group_id": "sg-0d6bafcb533ac1f60",
            "dhcp_options_id": "dopt-cb5b73a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ad01ecfafb1de72",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef6ef7dfc67bc984",
            "owner_id": "732328309145",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-vpc",
              "Project": "tta"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tta-dev-vpc",
              "Project": "tta"
            }
          }
        }
      ]
    }
  ]
}